# mips

./: Cargo.toml  README.md
config/: gamepad_bindings.toml  keyboard_bindings.toml  settings.toml
crates/mips-core/: Cargo.toml
crates/mips-core/src/: error.rs  gfx.rs  input.rs  lib.rs  ps1.rs
crates/mips-core/src/input/: pad.rs
crates/mips-core/src/ps1/: error.rs  mem_card.rs  settings.rs
crates/mips-core/src/ps1/psx/: bus.rs  cd.rs  exe.rs  mdec.rs  pad_memcard.rs  sync.rs  timers.rs  tty.rs  xmem.rs
crates/mips-core/src/ps1/psx/bios/: bios.rs  metadata.rs
crates/mips-core/src/ps1/psx/cd/: cdc.rs  disc.rs
crates/mips-core/src/ps1/psx/cd/cdc/: decoder.rs  dsp.rs
crates/mips-core/src/ps1/psx/graphics/: commands.rs  fifo.rs  gpu.rs
crates/mips-core/src/ps1/psx/graphics/rasterizer/: handle.rs
crates/mips-core/src/ps1/psx/graphics/rasterizer/draw/: rasterizer.rs  tests.rs
crates/mips-core/src/ps1/psx/mdec/: command.rs  idct_matrix.rs  test.rs
crates/mips-core/src/ps1/psx/memory/: dma.rs  mem_ctrl.rs  ram.rs  scratch_pad.rs
crates/mips-core/src/ps1/psx/memory/dma/: channel.rs  port.rs
crates/mips-core/src/ps1/psx/pad_memcard/: gamepad.rs  memory_card.rs
crates/mips-core/src/ps1/psx/processor/: cop0.rs  cpu.rs  gte.rs  instruction.rs  irq.rs  opcodes.rs
crates/mips-core/src/ps1/psx/sound/: spu.rs
crates/mips-core/src/ps1/util/fs/: file.rs  sys_dir.rs
crates/mips-desktop/: Cargo.toml
crates/mips-desktop/src/: app.rs  audio.rs  config.rs  error.rs  evt.rs  input.rs  main.rs  ui.rs  wnd.rs
crates/mips-desktop/src/input/: device.rs
crates/mips-desktop/src/input/device/: dualshock.rs  keyboard.rs
crates/mips-desktop/src/ui/: component.rs  games_list.rs  topbar.rs
crates/mips-desktop/src/wnd/: canvas.rs
crates/mips-web/: Cargo.toml
