[package]
name = "mips-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rust-ini = "0.21"
num-traits = "0.2"
arrayref = "0.3"
bitfield = "0.19.0"
flexbuffers = "25.2.10"
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
sha = "1.0"
num-derive = "0.4"

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.cdimage]
git = "https://github.com/niche420/cdimage"
branch = "master"
features = ["serde"]

[features]
default = ["ps1"]
ps1 = []
ps2 = ["ps1"]  # PS2 includes PS1 for backwards compatibility
ps3 = []