[package]
name = "mips-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
mips-core.path = "../mips-core"
anyhow.workspace = true
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sdl3 = { version = "0.17.3", features = ["build-from-source"] }
bytemuck = "1.23.0"

[features]

